# testrium

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-deploy.yml  build.yml
misny/: utils.py
misny/tools/: test_results.db
spectrum/: README.md  pyproject.toml
spectrum/spectrum/: core.py  utils.py
spectrum/spectrum/common/: sql_pool.py
spectrum/spectrum/tools/: benchmark.py
spectrum/tests/: Data.db
spectrum/tests/example_test/: config.toml  setup.py  test_case.py
spectrum/tests/test_1/: config.toml  setup.py  test_case.py
spectrum/tests/test_2/: config.toml  test_case.py
testrium/: core.py
testrium/common/: loaders.py  utils.py
testrium/common/generator/: config.toml  main.py
testrium/modules/: events.py
testrium/tools/: dashborad.py
tests/: Data.db
tests/example_test/: config.toml  setup.py  test_case.py
tests/example_test/units/: _host.toml  client.toml
tests/test_1/: config.toml  setup.py  test_case.py
tests/test_1/units/: client.toml
tests/test_2/: setup.py  test_case.py
tests/test_2/units/: _host.toml
