[tool.poetry]
name = "spectrum"
version = "0.1.0"
description = ""
authors = ["Cristian Camargo <ccf@cdone.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
spectrum = "spectrum.core:main"